[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Levels/HiLevel.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Levels/LevelEngine.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/SpeechBubble.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/SeaSalt.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Paprika.tscn" type="PackedScene" id=5]

[node name="HiLevel" type="Node2D"]
script = ExtResource( 1 )

[node name="Paprika" parent="." instance=ExtResource( 5 )]
position = Vector2( 304, 184 )

[node name="SeaSalt" parent="." instance=ExtResource( 4 )]
position = Vector2( 880, 128 )

[node name="SpeechBubble" parent="." instance=ExtResource( 3 )]
position = Vector2( 624, 360 )

[node name="Timer" type="Timer" parent="."]

[node name="LevelEngine" parent="." instance=ExtResource( 2 )]
visible = false
goal = "hi hey hello howdy"
grammar = "hi"
available_phonemes = [ "ħ", "h", "ɦ", "i", "ɨ", "ɛ" ]

[connection signal="on_complete" from="LevelEngine" to="." method="_on_LevelEngine_on_complete"]
[connection signal="on_wrong" from="LevelEngine" to="." method="_on_LevelEngine_on_wrong"]
